# mipt-system-programming

./: .gitignore  README.md
DieHardStack/: CMakeLists.txt  DieHardStack.h  main.cpp
DrivelGenerator/: CMakeLists.txt  DriveGenerators.cpp  DrivelGenerators.h  FileTools.cpp  FileTools.h  SharedText.cpp  SharedText.h  main.cpp
QuadraticEquation /: CMakeLists.txt  EquationResult.h  LinearEquation.cpp  LinearEquation.h  QuadraticEquation.cpp  QuadraticEquation.h  QuadraticEquationSolver.cpp  QuadraticEquationSolver.h  main.cpp
QuadraticEquation /tests/: test_main.cpp
TopComp/: CMakeLists.txt  Computer.cpp  Computer.h  DieHardStack.h  commands  main.cpp
